--- a/scrollreveal/sr.css
+++ b/scrollreveal/sr.css
@@ -1,15 +1,16 @@
 *{
     box-sizing: border-box;
 }
+a{
+    text-decoration: none;
+}
 h2{
     font-size: 2rem;
 }
 h3{
     font-size: 1.6rem;
 }
-section{
-    padding: 1REM;
-}
+
 /* nav */
 nav{
     display: flex;
@@ -24,9 +25,9 @@ nav{
 }
 /* news */
 .news{
-    height: 500px;
+
     background-color: rgb(255,225,194);
-    padding: 1rem;
+    padding: 2rem;
 }
 .sec-title{
     text-align: center;
@@ -55,7 +56,7 @@ nav{
     position: absolute;
     top: 50%;
 }
-.slider{
+.slider-news{
     width: 80%;
     height: 300px;
     background-color: #fff;
@@ -71,7 +72,7 @@ nav{
     padding: 1rem;
 }
 .btn-more{
-
+    color: #fff;
 }
 .btn-more::before{
     content: '>';
@@ -85,19 +86,142 @@ nav{
 }
 /* introduction */
 .introduction{
-    height: 500px;
     background-color: rgb(251,174,143);
+    padding: 2rem;
 }
+.intro-container{
+    width: 80%;
+    height: 400px;
+    margin: 1rem auto;
+    background-color: #fff;
+    padding: 1rem;
+    display: flex;
+}
+.intro-img{
+    width: 50%;
+    height: 100%;
+    background-color: rgb(224, 163, 163); 
+}
+.intro-img> img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.intro-content{
+    width: 50%;
+    padding: 1rem;
+}
+.intro-content h3{
+    
+    font-weight: 600;
+}
+.intro-content h4{
+    font-size: 0.9rem;
+    font-weight: 600;
+    padding: 0.5rem 0;
+    border-top: 1px dotted #888;
+    border-bottom: 1px dotted #888;
+    margin: 1rem 0;
+}
+.intro-content>p{
+    font-size: 0.7rem;
+    margin-bottom: 1rem;
+    line-height: 1rem;
+}
+.intro-icon{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    text-align: center;
+}
+.icon-iten{
+    width: 50%;
+    padding: 0.5rem;
+}
+/* RWD時改寬度的% 25%之類的 */
+.icon-iten>p{
+    font-size: 0.8rem;
+    margin: 0.5rem 0;
+}
+
 /* shopping */
+
 .shopping{
     height: 500px;
     background-color: rgb(255,225,194);
+    padding: 1rem;
+}
+.slider-shopping{
+    width: 80%;
+    height: 300px;
+    background-color: #777;
+    margin: 1rem auto;
 }
 /* wall */
 .wall{
-    height: 500px;
+    padding: 1rem;
     background-color: rgb(255,240,225);
 }
+.wall-container{
+    width: 95%;
+    margin: 0  auto;
+    background-color: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.wall-item{
+    width: 250px;
+    background-color: rgb(218, 167, 167);
+    margin: 1rem;
+    
+    padding: 0.5rem;
+}
+.wall-item-top{
+    display: flex;
+}   
+.wit-logo{
+    width: 20%;
+}
+.wit-logo>img{
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+.wit-text{
+    margin-left: 10px;
+}
+.wit-text>p{
+    font-size: 0.8rem;
+    margin-top: 5px;
+}
+.wall-item-center{
+    padding: 1rem 0;
+    font-size: 0.8rem;
+    line-height: 1.1rem;
+}
+.wib-count{
+    display: flex;
+    justify-content: space-around;
+    margin-bottom: 0.5rem;
+}
+.wib-count-text{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    line-height: 1.2rem;
+}
+.wib-count-text>span{
+    margin-left: 5px;
+}
+.wib-link{
+    text-align: center;
+    padding: 1rem;
+    background-color: #999;
+}
+
+
+
 /* footer */
 .footer{
     
